fixed the credits spacing

--- a/interactive-movie-app/src/app/components/home/home.component.scss
+++ b/interactive-movie-app/src/app/components/home/home.component.scss
@@ -386,6 +386,12 @@
           max-width: 150px;
         }
 
+        @media screen and (min-width: 2500px) {
+          img {
+            max-width: 200px;
+          }
+        }
+
         &.dozent {
           grid-column: 4 / span 1;
         }
@@ -395,12 +401,21 @@
         grid-column: 6;
       }
 
+      .cast-headline {
+        align-self: start;
+        padding-top: 40px;
+
+        @media screen and (max-width: 1600px) {
+          padding: 0;
+        }
+      }
+
       .main-cast {
         padding-top: 50px;
         grid-column: 2 / span 2;
         align-self: start;
 
-        @media screen and (max-width: 1200px) {
+        @media screen and (max-width: 1600px) {
           padding: 0;
         }
       }
@@ -412,7 +427,7 @@
 
         font-size: 0.8em;
 
-        @media screen and (max-width: 1200px) {
+        @media screen and (max-width: 1600px) {
           padding: 0;
         }
       }
@@ -425,7 +440,7 @@
 
         font-size: 0.8em;
 
-        @media screen and (max-width: 1200px) {
+        @media screen and (max-width: 1600px) {
           padding: 0;
         }
       }
@@ -447,6 +462,20 @@
         
         p {
           font-size: 0.7em;
+        }
+      }
+
+      @media screen and (min-width: 2500px) {
+        h1 {
+          font-size: 5em;
+        }
+    
+        h3 {
+          font-size: 3em;
+        }
+        
+        p {
+          font-size: 1.3em;
         }
       }
     }
